# qualinvest

./: .gitignore  .gitmodules  Cargo.toml  README.md  Release_History.txt  qualinvest_template.json  qualinvest_template.toml  qualinvest_test.toml
gui_tests/: Cargo.toml  qualitest.side  run_gui.sh
gui_tests/src/: main.rs
qualinvest-gui/: Cargo.toml  README.md
qualinvest-gui/.sqlx/: query-02294492548f7fdcf119d27da857a0e969330d3fd76f12be4d0f97a62cdae746.json  query-175453b650a3cea090c27cc69c1062ab30680e75482c2126d0141743bd2b0450.json  query-31b12979452732ea05dddc45f302302a993b4537acf5eff03ef66905f59f7e01.json  query-386f25894861f7bafffed828a7cce8059592465ac1fc6c93a3d96058c6399673.json  query-41426d77a5357b3f1f96618e3e42c373c5a0918a21f22ddce4ae7b996207bb32.json  query-55954601125a946199320a1a1af600fadac8f2742de7012d8c395ade5a92aa60.json  query-61686d29fb5c31b672e5f92faa82c9a5cf9c7147d53ae92299befbade88fb4dc.json  query-703b31d06c76239406f3067283b252dce271dbc8f54177e4b5320b2d34ab2fff.json  query-71f3a85b6d023244e48328b79b4c09cd344baa75aebb7d72917b5e6bfe4ccedd.json  query-76a89e411044028c386d9c61a9a726d991bd82f116ac6dc6d113a93f09d94255.json  query-820ce4beb8c1eef60f25c504fd938aaa6ee28bbaef1abf6a89816cda4941155d.json  query-8c57e4279fb2b918133f12330c8079dcf81683acd4f7fed69a031bcffbaf9902.json  query-9b3c2e50b59ec1873086307d2aeab1b53e38064fbe7db5a3218498e0fdf032b7.json  query-b6b4cb726399a888b43dcab0e19b8aa2f7707b2a1322faa6ee2d2e9953c28f2c.json  query-bb1f5541d7aa333ae6138f427518de21673d085da8169dbd51f76a8e42a8c352.json  query-d324e06eb47383c26aea42d272abf6ad32d76e6d39aed072be146e6af674071a.json  query-d6beb284048d93219d161169d79c814099c72911081c73a9ee32b4e69a1918f4.json
qualinvest-gui/src/: account.rs  account_view.rs  app.rs  asset_view.rs  assets.rs  auth.rs  db.rs  error.rs  global_settings.rs  lib.rs  main.rs  position.rs  position_view.rs  quote_graph.rs  quote_view.rs  quotes.rs  settings.rs  settings_view.rs  simulation.rs  simulation_view.rs  ticker.rs  ticker_view.rs  time_range.rs  transaction_view.rs  transactions.rs
qualinvest-gui/style/: main.scss
qualinvest_cli/: Cargo.toml  sqlx-data.json
qualinvest_cli/.sqlx/: query-0422b4b478684508ac63e235e518aa6e35f834296a6d254e6e4ca1c1b3b6498e.json  query-0a26bf18ac5552c324862c3b73b3010015c775616e529ec526f894bde6365dd5.json  query-15005c38c3fea2b49c7c3ac8d0c23d4976d42dbe043c13c6d90eae6fc4c757ff.json  query-1df27b7293e91747dee8d5d7e1286975a23c8d53bf6bf4f3daf26ab437b0eb4a.json  query-2afb443cf28ea15c83cf7fb8a27fd7fda464032912af371c32f5d1a052982b9f.json  query-2c1563102eb1cb7e6df07c385f21cc5d4fe9e06725980b1ea27099e93eb46f56.json  query-392d63705ff96fd46ab83ada93236775b4c148ee5ab6bd116da233fadda48c44.json  query-401b351e1102d9021f934e10bc6113b853929c8b9e0aad0e567e9fcc072ec5c4.json  query-459fd856f9100cd660c15a332a721b5142d681f3cd421151e03413b8fc035148.json  query-6aeb6bfe1747d11d5aa9ac3be10e10222b4ffb7fb1f1ea715dc73d64c893c2b3.json  query-747a6b3842fc2502e3906a10a6755d5d61858b54ac2575dcc84fed721e835a0b.json  query-76833dd09b95cd9e93ff8fdf508fb60d7b1bb899afe7db0a0236a003b1cd9842.json  query-78e01beb0c03eba84d0ba233d664057c1f10259d0ab06886ce700ad9d4412807.json  query-81d9edbd613ccf7926b2becc188446e851cbe2eddda9ad70c8051724343e5a86.json  query-8d9f9059c09ec49e5ed8cb1e7e4a395f8ab726afb1e4357cba095bfead6c0690.json  query-a1777934752b658b5791552b9829e0bae5bd098f5da16d495b5c38dd63e64f5a.json  query-a482feb6c0752ac3171d6445510dd60778993bf2ab980aa043a8cc77364a2bc2.json  query-abdab21dc7716e6f8374a5b569216cdfb67519cf9c3ce45bca866e190c29c0d7.json  query-abfe95fdf996d1074c0470ef39c304d6a6e3235892975756285c4cabdd8cd4c9.json  query-b19d379a18c3166783e90ebabec4cbd831ac791290ae1f2b795d022f165d1b8a.json  query-c77da158fcca3d32ca14121b5a425b871289c03fbb6ed01b55d8af8e2fec4499.json  query-e67111f10d4e20d58035cd5b6c1a6f9219ec347287e0229aadfc0ec2370a8f48.json  query-e9b7b56dcb7ee5836ce74adc89c477069af442ff007ae5013b1405cfb615ad03.json  query-ec022bae116fd05f6414bd9bf69b77c597add85a6aa0f056954860ffc7932114.json  query-f1fe1f80a7fa01b7aa12318f6bfd164ec72d4f730792aad71cfc2b4892533eaa.json  query-f4e58c1bb28a0f5b99467b24e0a353a63fe63bdc7722c2827aee820b914e8f6f.json  query-fae3c5cccb74c9e8b7d76a29d9439ecb9d68a1b6271a6576089242322014f96d.json  query-fcc8bbab7cefe1983f25b14b798f704082c1e30b66991bddf030a661e3c31e73.json
qualinvest_cli/src/: main.rs  plot.rs
qualinvest_core/: Cargo.toml  sqlx-data.json
qualinvest_core/.sqlx/: query-23745f964aba02ba7e16e72cb9312e66470400c79c1ef0b207a246095812c407.json  query-479c5a0534bb8542a7f060d5063204b78f8bb95868da14ff743daa7e81c57d89.json  query-5813af3ac89f3bf5cfa0e9430e6be959e3c8df97014cf1977df29c1f731d7dd3.json  query-6414485ed623271266190bb20b50802b81f4db3a8ff097840218b5f05f57dca3.json  query-6740b80a410ecf8ba9f4fccb7d68128c5f94cf3dac3e0ce93d9e1fc352a3c721.json  query-6a4fd15145140c4f5e3601464cd4b8fa0e74e4220957f83635be2cce6425135e.json  query-6e1d35d6410733c2d5e677b621f9d15d4bbb1a26776c73f09d8bf1b0ee2a3a46.json  query-7b8c125724183329597e1ed7a28354d6f4215fe3fca45399b980af13e44cee55.json  query-82ac8322f62c8ddfe46a3b2e9a7068add3378d5c771d83ed9df63cd88e4237af.json  query-838599ec25fdc2dd77d4cbbffc3f44766ef14eb37ff5d8c7c1354f9797bc120f.json  query-afc6cbfeba4c7bccb1969d91a7b1a2a9a2a4504fe843017cc1862bf204c41e4a.json  query-b0a0fdc6ec8f52df52a06cc3026979b9ca9f5f1951511bd3056b55ecf928125e.json  query-c00a2b08a5f15aaae20d986a89250f342f28230705b49715349cdd0616276d2f.json  query-c175bbf620d9ca8d2f0c57a83461770f59dffbe7006c1093593ec9866646efcb.json  query-db60cdecfdbf0d64b8716126987887243527ca54803865d63681f7410ace3007.json  query-e977d8ba0b90879996b31e154a86422b8a1608d77f8e2c7d6abb9d8ee7ea61db.json  query-ebbcaaec6ff6a9e7f3298344987b236c68bfecfc8110994f6ca5e817492b33a7.json  query-ee44c2e82afab370ed64a67d739e8e2684708c570d00955bdf2ab61cb43b654c.json  query-ef76aaa3ad548314a46e33fda261122449b8053b1d6aa112c7c653771ee1e5e4.json  query-f16aa7728200487b0b0b7a46dfc5ed207834044ad27996e72cebed43c3a06459.json  (+2 more)
qualinvest_server/: Cargo.toml  README.md  sqlx-data.json
src/: accounts.rs  (+2 more)
wasm_graph/: Cargo.toml  README.md
(+103 files in other folders)
