[package]
name = "qualinvest"
version = "0.2.0"
authors = ["Mark Beinker <mwb@quantlink.de>"]
edition = "2018"
description = "A cloud based tool for quantitative analysis and management of financial asset portfolios"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/qualinvest"
readme = "README.md"
keywords = ["finance", "investment", "quantitative", "analysis"]

[dependencies]
finql = "0.5.4"
#finql = {path = "../finql"}
regex = "1.3"
lazy_static = "1.4"
chrono = "0.4"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
glob = "0.3"
postgres = { version = "0.17", features = ["with-chrono-0_4"] }
tokio-postgres = "0.5"
ring = "0.16"
data-encoding = "2.2"
buffer = "0.1"
