[package]
name = "qualinvest"
version = "0.3.2"
authors = ["Mark Beinker <mwb@quantlink.de>"]
edition = "2018"
description = "A cloud based tool for quantitative analysis and management of financial asset portfolios"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/qualinvest"
readme = "README.md"
keywords = ["finance", "investment", "quantitative", "analysis"]

[workspace]
members = ["qualinvest_core", "qualinvest_cli"]

[lib]
name = "qualinvest_core"
path = "qualinvest_core/src/lib.rs"

[[bin]]
name = "qualinvest_cli"
path = "qualinvest_cli/src/main.rs"

[dependencies]
finql = { version = "0.7", path = "../finql" }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
glob = "0.3"
lazy_static = "1.4"
chrono = "0.4"
ring = "0.16"
regex = "1.3"
postgres = { version = "0.17", features = ["with-chrono-0_4"] }
tokio-postgres = "0.5"
data-encoding = "2.2"
csv = "1.1"
toml = "0.5"