[workspace]
members = [
    "qualinvest_core",
    "qualinvest_cli",
    "qualinvest_server",
    "qualinvest-gui",
    "wasm_graph",
]
exclude = ["finql", "gui_tests"]
resolver = "3"

[profile.release]
lto = true

[workspace.dependencies]
finql = { version = "0.13", path = "finql" }
time = { version = "0.3", features = ["local-offset", "serde"] }
simple_logger = "5.0"
console_log = "1"
log = "0.4"

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
