[package]
name = "qualinvest-gui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
finql =  {workspace = true, optional = true}
time.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
console_log = {workspace = true, optional = true}
log.workspace = true
simple_logger.workspace = true
cal-calc = { workspace = true, optional = true }

leptos = { version = "0.7.0" }
leptos_router = { version = "0.7.0" }
axum = { version = "0.7", features = ["macros"], optional = true }
leptos_axum = { version = "0.7.0", optional = true }
leptos_meta = { version = "0.7.0" }
tokio = { version = "1", features = ["rt-multi-thread", "signal"], optional = true }
wasm-bindgen = { version = "=0.2.100", optional = true }
qualinvest_core = { version = "0.2", path = "../qualinvest_core", optional = true }
cfg-if = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
clap = { version = "4.5.36", features = ["derive"] }
confy = "0.6.1"
http = "1.3.1"
tower = "0.5.2"
tower-http = "0.6.2"
thiserror = "2.0.12"
web-sys = "0.3"
axum-login = { version = "0.16", optional = true }
tower-sessions = { version = "0.13", features = ["memory-store", "signed"], optional = true }
tower-sessions-sqlx-store = { version = "0.14", features = ["postgres"], optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }
argon2 = { version = "0.5", optional = true }
async-trait = { version = "0.1", optional = true }
rand = { version = "0.8", optional = true }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "json",
    "migrate",
], optional = true }

[features]
hydrate = ["leptos/hydrate", "dep:console_error_panic_hook", "dep:wasm-bindgen", "dep:console_log"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:axum-login",
    "dep:tower-sessions",
    "dep:tower-sessions-sqlx-store",
    "dep:finql",
    "dep:qualinvest_core",
    "dep:uuid",
    "dep:argon2",
    "dep:async-trait",
    "dep:rand",
    "dep:sqlx",
    "dep:cal-calc",
]

#[target.wasm32-unknown-unknown]
#rustflags = ["--cfg", 'getrandom_backend="wasm_js"']

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "qualinvest-gui"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
