[package]
name = "qualinvest_cli"
version = "0.1.2"
authors = ["Mark Beinker <mwb@quantlink.de>"]
edition = "2018"
description = "Command line executable of the qualinvest project"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/qualinvest"
keywords = ["finance", "investment", "quantitative", "analysis"]

[dependencies]
qualinvest_core = { version="0.1.2", path="../qualinvest_core" }
finql = { version = "0.7", path = "../../finql" }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
glob = "0.3"
csv = "1.1"
toml = "0.5"
