[package]
name = "qualinvest_core"
version = "0.1.5"
authors = ["Mark Beinker <mwb@quantlink.de>"]
edition = "2018"
description = "Core library of the qualinvest project"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/qualinvest"
keywords = ["finance", "investment", "quantitative", "analysis"]

[dependencies]
finql = {version="0.9.3", path="../finql/finql" }
finql-postgres = { version="0.2.3", path="../finql/finql-postgres" }
finql-data = { version="0.1.5", path="../finql/finql-data" }
serde = { version = "1.0.*", features = ["derive"] }
lazy_static = "1.4"
chrono = "0.4"
ring = "0.16"
regex = "1.3"
data-encoding = "2.2"
csv = "1.1"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono", "offline" ] }
async-trait = "0.1"
