[package]
name = "qualinvest_core"
version = "0.1.5"
authors = ["Mark Beinker <mwb@quantlink.de>"]
edition = "2018"
description = "Core library of the qualinvest project"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/qualinvest"
keywords = ["finance", "investment", "quantitative", "analysis"]

[dependencies]
finql = {version="0.12", path="../finql" }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
chrono = "0.4"
ring = "0.16"
regex = "1.3"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono", "offline", "json" ] }
async-trait = "0.1"
sanitize-filename = "0.4"
unic-ucd = "0.9"
htmlescape = "0.3"
thiserror = "1.0"
cal-calc = "0.1"
data-encoding = "2.3"
