[package]
name = "qualinvest_core"
version = "0.2.0"
authors = ["Mark Beinker <mwb@quantlink.de>"]
edition = "2018"
description = "Core library of the qualinvest project"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/qualinvest"
keywords = ["finance", "investment", "quantitative", "analysis"]

[dependencies]
finql.workspace = true
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
time = "0.3"
ring = "0.17"
regex = "1.3"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "time",
    "json",
    "migrate"
] }
async-trait = "0.1"
sanitize-filename = "0.6"
unic-ucd = "0.9"
htmlescape = "0.3"
thiserror = "2.0"
cal-calc = "0.2"
data-encoding = "2.3"
