[package]
name = "qualinvest_server"
version = "0.1.0"
authors = ["Mark Beinker <mwb@quantlink.de>"]
edition = "2018"
description = "Http based GUI of the qualinvest project"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/qualinvest"
keywords = ["finance", "investment", "quantitative", "analysis"]

[dependencies]
rocket = { version="0.5.0-dev", git="https://github.com/SergioBenitez/Rocket.git" }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0"
finql = { version = "0.7.4" }
chrono = "0.4"
qualinvest_core = { version="0.1.2", path="../qualinvest_core" }
rusqlite = "0.23"
unic-ucd = "0.9"
htmlescape = "0.3.1"
tera = "1.2"
clap = "2.33"
toml = "0.5"
num-format = "0.4"
regex = "1.3"
lazy_static = "1.4"
unicode-segmentation = "1.6"

[dependencies.rocket_contrib]
version="0.5.0-dev"
git="https://github.com/SergioBenitez/Rocket.git"
default-features = false
features = ["json","postgres_pool", "tera_templates"]
