[package]
name = "qualinvest_server"
version = "0.1.0"
authors = ["Mark Beinker <mwb@quantlink.de>"]
edition = "2018"
description = "Http based GUI of the qualinvest project"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/qualinvest"
keywords = ["finance", "investment", "quantitative", "analysis"]

[dependencies]
finql.workspace = true
time.workspace = true
rocket = { version = "0.5", features = ["secrets"] }
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
devise = { version = "0.4" }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0"
qualinvest_core = { version = "0.2", path = "../qualinvest_core" }
tera = "1.2"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
num-format = "0.4"
regex = "1.3"
lazy_static = "1.4"
unicode-segmentation = "1.6"
async-trait = "0.1"
multipart = "0.18"
mime = "0.3"
tempfile = "3.2"
futures = "0.3"
once_cell = "1.8"
thiserror = "2.0"
pretty_env_logger = "0.5"
