[package]
name = "wasm-graph"
version = "0.1.0"
authors = ["Mark Beinker <mwb@quantlink.de>"]
edition = "2021"

[lib]
crate-type=["cdylib", "lib"]

[dependencies]
plotters = "0.3.1"
plotters-canvas = "^0.3.*"
plotters-backend = "^0.3.*"
plotters-bitmap = "^0.3.*"
wasm-bindgen = "0.2.62"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.39", features = ["HtmlCanvasElement", "console"] }
chrono =  { version = "0.4", features = ["wasmbind"]}

[profile.release]
lto = true
